[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/godotWad/scenes/gameModes/main/options/inputList.gd" type="Script" id=1]
[ext_resource path="res://addons/godotWad/scenes/gameModes/main/options/inputEnum.gd" type="Script" id=2]

[node name="inputList" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="deviceSelect" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 20.0
text = "Keyboard"
items = [ "Keyboard", null, false, 0, null, "Controller", null, false, 1, null ]
selected = 0

[node name="keyboardBindings" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 24.0
size_flags_horizontal = 3
columns = 2

[node name="controllerBindings" type="GridContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 314.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="bottomBar" type="HBoxContainer" parent="VBoxContainer"]
margin_left = 456.0
margin_top = 28.0
margin_right = 567.0
margin_bottom = 48.0
size_flags_horizontal = 4

[node name="restorDefault" type="Button" parent="VBoxContainer/bottomBar"]
margin_right = 111.0
margin_bottom = 20.0
text = "Restore Default"

[node name="inputEnums" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource( 2 )

[connection signal="item_selected" from="VBoxContainer/deviceSelect" to="." method="_on_deviceSelect_item_selected"]
[connection signal="pressed" from="VBoxContainer/bottomBar/restorDefault" to="." method="_on_restorDefault_pressed"]
